2012-08-17  Corinna Vinschen  <vinschen@redhat.com>

	* configure.ac (sysroot): Set sysroot to $prefix since include is
	attached in Makefile.am anyway.
	* configure: Regenerate.

2012-08-10  Ozkan Sezer  <sezeroz@gmail.com>

	* misc/getopt.c (optreset): Define as __mingw_optreset (bugs
	#3554856, 3556105.)

2012-08-09  Corinna Vinschen  <vinschen@redhat.com>

	* Makefile.am (libglut.a): Add missing "lib32/".
	* Makefile.in: Regenerate.

2012-08-09  Corinna Vinschen  <vinschen@redhat.com>

	* Makefile.am (libdelayimp.a): Only build and install if not creating
	a w32api installation for Cygwin.
	(libglut.a): Ditto.
	* Makefile.in: Regenerate.

2012-08-08  Kai Tietz  <ktietz@redhat.com>

	* gdtoa/dg_qnan.h: Make Nan constants positive valued.

2012-08-08  Corinna Vinschen  <vinschen@redhat.com>

	* configure.ac: Fix default to --enable-w32api=no in previous patch.
	* configure: Regenerate.

2012-08-07  Corinna Vinschen  <vinschen@redhat.com>

	* configure.ac: Replace --enable-startup with --enable-w32api option.
	(LIB64SUFFIXDIR, LIB32SUFFIXDIR): Conditionalize on enable_w32api.
	* Makefile.am: Replace STARTUP conditions with W32API conditions.
	Drop libraries depending on W32API.
	(libsrcdir): Set to includedir.
	* configure: Regenerate.
	* Makefile.in: Regenerate.

2012-08-07  Kai Tietz  <ktietz@redhat.com>

	* secapi/wmemcpy_s.c: New file.
	* secapi/memcpy_s.c: New file.
	* secapi/_strdate_s.c: New file.
	* secapi/_wstrdate_s.c: New file.
	* secapi/_strtime_s.c: New file.
	* secapi/_wstrtime_s.c: New file.
	* secapi/_gmtime64_s.c: New file.
	* secapi/_gmtime32_s.c: New file.
	* secapi/_localtime32_s.c: New file.
	* secapi/_localtime64_s.c: New file.
	* secapi/_ctime64_s.c: New file.
	* secapi/_wctime64_s.c: New file.
	* Makefile.am: Add new files.
	* Makefile.in: Regenerated.
	* lib32/msvcrt.def: Commented symbols.
	* lib64/msvcrt.def: Likewise.

2012-08-03  Kai Tietz  <ktietz@redhat.com>

	* secapi/asctime_s.c: New file.
	* secapi/_wasctime_s.c: New file.